[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Images/BJ.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/ArtFont.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/MainFont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.764706, 0.784314, 0.788235, 0.784314 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 1, 1, 0.313726 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.764706, 0.784314, 0.788235, 0.862745 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 1, 1, 0.313726 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.764706, 0.784314, 0.788235, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 1, 1, 0.313726 )
shadow_size = 10

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=8]
resource_name = "遮罩"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.5 )
}

[sub_resource type="Animation" id=7]
resource_name = "开场动画"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Title:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -480, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Title:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Buttons:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -480, -0.25, 0, 0.25, 0, -480, -0.25, 0, 0.25, 0, 40, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.8 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Buttons:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.8 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Version:rect_position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 900, -0.25, 0, 0.25, 0, 900, -0.25, 0, 0.25, 0, 820, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Version:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 0.5, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Title:rect_size:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 480, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Title:rect_size:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 186, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 1 )
text = "PlaneWar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -159.5
margin_right = 200.0
margin_bottom = 159.5
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Buttons"]
margin_right = 400.0
margin_bottom = 73.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "开始游戏"

[node name="HowToPlay" type="Button" parent="Buttons"]
margin_top = 123.0
margin_right = 400.0
margin_bottom = 196.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "游戏玩法"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 246.0
margin_right = 400.0
margin_bottom = 319.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "退出游戏"

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -353.0
margin_top = -32.0
custom_colors/font_color = Color( 0, 0.741176, 1, 0.784314 )
custom_fonts/font = SubResource( 6 )
text = "PlaneWar V1.0 by YourName"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="遮罩" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="遮罩"]
"anims/遮罩" = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "开场动画"
"anims/开场动画" = SubResource( 7 )

[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
